[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/book/RecipeBook.gd" type="Script" id=1]
[ext_resource path="res://common/book/recipebook.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 70 )

[node name="RecipeBook" type="Area2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_player_entered"]
[connection signal="body_exited" from="." to="." method="_on_player_exited"]
